--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,13 @@
     box-sizing: border-box;
 }
 
-body {
+main, form, .container {
     text-align: center;
+}
+
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem;
 }
