--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,8 +7,26 @@ section, form, h1 {
 }
 
 footer {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     width: 100%;
     height: 2.5rem;
+}
+
+body {
+    background-color: #4C5454;
+}
+
+section, form {
+    background-color: #1EA896;
+}
+
+.startBtn {
+    background-color: #FF715B;
+    border-radius: 10px;
+}
+
+#quiz-image {
+    width: 300px;
+    height: auto;
 }
