--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ section, form, h1 {
 }
 
 footer {
-    position: fixed;
+    position: absolute;
     bottom: 0;
     width: 100%;
     height: 2.5rem;
@@ -27,6 +27,6 @@ section, form {
 }
 
 #quiz-image {
-    width: 300px;
-    height: auto;
+   max-width: 100%;
+   max-height: 30vh;
 }
