--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,19 +2,33 @@
     box-sizing: border-box;
 }
 
+header a {
+    text-decoration: none;
+    background-color: white;
+    color: #523F38;
+    border-radius: 10px;
+    padding: 10px;
+}
+
+header {
+    padding: 10px;
+}
+
 section, form, h1 {
     text-align: center;
 }
 
 footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 2.5rem;
+    display: flex;
+    justify-content: flex-end;
+    float: left;
+    color: white;
+    padding: 15px;
 }
 
 body {
     background-color: #4C5454;
+    margin: 15px;
 }
 
 section, form {
@@ -23,10 +37,16 @@ section, form {
 
 .startBtn {
     background-color: #FF715B;
-    border-radius: 10px;
+    border-radius: 5px;
+    padding: 15px;
 }
 
 #quiz-image {
    max-width: 100%;
    max-height: 30vh;
+}
+
+#choices {
+    display: flex;
+    justify-content: space-evenly;
 }
