started to center containers, hover effects over buttons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,10 +12,14 @@ header a {
 
 header {
     padding: 10px;
+    margin-bottom: 10px;
 }
 
-section, form, h1 {
+section, form, h1, article {
     text-align: center;
+    width: 75%;
+    border-radius: 10px;
+    padding-bottom: 10px;
 }
 
 footer {
@@ -33,6 +37,7 @@ body {
 
 section, form {
     background-color: #1EA896;
+    display: inline-block;
 }
 
 .startBtn {
@@ -44,9 +49,19 @@ section, form {
 .quiz-image {
    max-width: 100%;
    max-height: 30vh;
+   padding: 3px;
 }
 
 #choices {
-    display: flex;
+    display: inline-block;
     justify-content: space-evenly;
+}
+
+main {
+    text-align: center;
+}
+
+button:hover {
+    background-color: white;
+    cursor: pointer;
 }
