minor modifications to CSS so that all elements are centered when page is first displayed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@ section, form, h1, article {
 footer {
     display: flex;
     justify-content: flex-end;
-    float: left;
+    float:left;
     color: white;
     padding: 15px;
 }
@@ -57,14 +57,22 @@ section, form {
     justify-content: space-evenly;
 }
 
-/* Extra small devices (phones, 600px and down) */
+button:hover {
+    background-color:white;
+    cursor:pointer;
+}
+
+.shelter-container {
+    text-align: center;
+}
+
+
 @media only screen and (max-width: 600px) {
     header {
         max-width: 100%;
     }
 }
 
-/* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
     header {
         max-width: 100%
@@ -84,7 +92,7 @@ section, form {
 
 }
 
-/* Medium devices (landscape tablets, 768px and up) */
+
 @media only screen and (min-width: 768px) {
     header {
         max-width: 100%
@@ -103,7 +111,7 @@ section, form {
     }
 }
 
-/* Large devices (laptops/desktops, 992px and up) */
+
 @media only screen and (min-width: 992px) {
     header {
         max-width: 100%
@@ -122,7 +130,7 @@ section, form {
     }
 }
 
-/* Extra large devices (large laptops and desktops, 1200px and up) */
+
 @media only screen and (min-width: 1200px) {
     header {
         max-width: 100%
@@ -148,14 +156,14 @@ section, form {
 }
 
  @media only screen and (min-width: 601px) {
-    div.example {
-      font-size: 80px;
+    body {
+      font-size: 20px;
     }
 }
   
 
   @media only screen and (max-width: 600px) {
-    div.example {
+    body {
       font-size: 30px;
     }
 }
