--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,6 +82,11 @@ button:hover {
     display: none;
 }
 
+.dogImg{
+    height:500px;
+    width: 500px;
+    }
+
 
 @media only screen and (max-width: 600px) {
     header {
