--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,9 @@ body {
     background-color: #4C5454;
     margin: 15px;
 }
+ul {
+    list-style-type: none;
+}
 
 section, form {
     background-color: #1EA896;
@@ -99,6 +102,8 @@ img {
 .bold {
     font-weight: bold;
 }
+
+
 
 
 @media only screen and (max-width: 600px) {
