--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,6 +49,7 @@ ul {
 section, form {
     background-color: #1EA896;
     display: inline-block;
+    justify-content: center;
 }
 
 .startBtn {
@@ -83,6 +84,10 @@ img {
     max-height: 400px;
 }
 
+/* #matchBreed {
+    display: flex;
+} */
+
 .basic-card {
     display: inline-block;
     justify-content: center;
@@ -103,10 +108,6 @@ img {
 .bold {
     font-weight: bold;
 }
-
-
-
-
 
 
 @media only screen and (max-width: 600px) {
